--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,40 +1,58 @@
+# ## Dockerfile ##
+#
+# This file describes the complete environment in which our server will run,
+# including the operating system and all software dependencies. It is used
+# by Docker Compose to build a Docker image for our application.
+
 # Base this image on an official Node.js long term support image.
-FROM node:6.2.1
+FROM node:8.1.2-alpine
+
+# Install some additional packages that we need.
+RUN apk add --no-cache tini curl bash sudo
 
 # Use Tini as the init process. Tini will take care of important system stuff
 # for us, like forwarding signals and reaping zombie processes.
-RUN wget -qO /tini https://github.com/krallin/tini/releases/download/v0.9.0/tini \
- && chmod +x /tini
-ENTRYPOINT ["/tini", "--"]
+ENTRYPOINT ["/sbin/tini", "--"]
 
 # If there is an NPM registry running on the host at port 4873, use that during
-# build time.
+# build time. Don't worry too much about what this step does, it's just here
+# to speed up builds by using a cache.
 RUN export NPM_REG_CACHE="http://$(ip route | awk '/default/ {print $3}'):4873" \
  && curl -sLI -m 1 -o /dev/null "$NPM_REG_CACHE" \
  && npm --silent set registry "$NPM_REG_CACHE" \
  || true
+# Work-around for Sequelize
+RUN npm config set @types:registry https://registry.npmjs.org
 
 # Create a working directory for our application.
 RUN mkdir -p /app
 WORKDIR /app
 
-# Install the project dependencies.
-COPY package.json /app/
-RUN npm --silent install \
- && mkdir /deps \
- && mv node_modules /deps/node_modules
-ENV NODE_PATH=/deps/node_modules
+# Install other system dependencies (for building sqlite3).
+RUN apk add --no-cache python g++ make git
 
-# Put executables in the system path.
-ENV PATH=$NODE_PATH/.bin:$PATH
+# Install the project's NPM dependencies.
+COPY package.json /app/
+RUN npm --silent install
+
+# Install sequelize-mocking manually - it's ugly, but it works.
+RUN npm --silent install git+https://github.com/anibali/node-sqlite3.git#alpine
+RUN npm --silent install sequelize-mocking@0.4.1
+
+# Move NPM dependencies out of the /app folder.
+RUN mkdir /deps && mv node_modules /deps/node_modules
+
+# Set environment variables to point to the installed NPM modules.
+ENV NODE_PATH=/deps/node_modules \
+    PATH=/deps/node_modules/.bin:$PATH
 
 # Copy our application files into the image.
 COPY . /app
 
-# Create a non-privileged user for running commands inside the container.
-RUN adduser --disabled-password --gecos '' appuser \
- && chown -R appuser:appuser /app
-USER appuser
+# Switch to a non-privileged user for running commands inside the container.
+RUN chown -R node:node /app /deps \
+ && echo "node ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/90-node
+USER node
 
 # Point NPM to the official registry.
 RUN npm --silent set registry "https://registry.npmjs.org"
