--- a/api/package.json
+++ b/api/package.json
@@ -6,20 +6,16 @@
   "scripts": {
     "start": "./start.sh"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "1.15.1",
-    "express": "4.13.4",
-    "lodash": "4.13.1",
-    "mysql": "2.11.1",
-    "sequelize": "3.23.3"
+    "body-parser": "1.17.2",
+    "express": "4.15.3",
+    "lodash": "4.17.4",
+    "mysql": "2.13.0",
+    "sequelize": "3.30.4"
   },
   "devDependencies": {
-    "jasmine": "2.4.1",
-    "nodemon": "1.9.2",
-    "request": "2.72.0",
-    "sequelize-cli": "2.4.0",
-    "sequelize-mocking": "0.2.0"
+    "jasmine": "2.8.0",
+    "nodemon": "1.11.0",
+    "sequelize-cli": "2.7.0"
   }
 }
