--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -9,6 +9,7 @@
     "react"
   ],
   "rules": {
+    "react/jsx-filename-extension": 0,
     "react/no-multi-comp": 0,
     "react/prop-types": 0,
     "react/sort-comp": 0,
@@ -20,6 +21,7 @@
     "no-alert": 0,
     "new-cap": 0,
     "func-names": 0,
+    "function-paren-newline": 0,
     "keyword-spacing": 0,
     "space-before-function-paren": [2, "never"],
     "object-shorthand": [2, "properties"],
