--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "redux": "3.7.0",
     "redux-thunk": "2.2.0",
     "request": "2.81.0",
-    "simplemde": "1.11.2"
+    "simplemde": "1.11.2",
+    "youch": "2.0.7"
   },
   "devDependencies": {
     "babelify": "7.3.0",
